--- a/Stylesheets/_div.more.scss
+++ b/Stylesheets/_div.more.scss
@@ -8,7 +8,7 @@ div.more
     {
         display: block;
         padding: 0.5rem 0;
-        border: 2px dashed $light-accent-barbie-pink-semi;
+        border: 2px dashed var(--fg-accent-semi);
         text-decoration: none;
     }
     > a.button:hover,
@@ -16,7 +16,7 @@ div.more
     > form button:hover,
     > form button:focus
     {
-        border-color: $light-accent-barbie-pink;
+        border-color: var(--fg-accent);
     }
 
     > a,
@@ -33,7 +33,7 @@ div.more
         background: none;
         box-shadow: none;
         border-radius: 0;
-        color: $light-accent-barbie-pink;
+        color: var(--fg-accent);
     }
 
     > form button:active
@@ -56,7 +56,7 @@ div.more
         h3
         {
             font-weight: 500;
-            color: $light-foreground-semi;
+            color: var(--fg-semi);
         }
 
         figure
