--- a/Stylesheets/_kbd.scss
+++ b/Stylesheets/_kbd.scss
@@ -1,9 +1,7 @@
-@import 'Colors';
-
 kbd
 {
-    background-color: $light-code-well;
+    background-color: var(--bg-codewell);
     padding: 0.2rem 0.5rem 0.25rem;
     border-radius: 0.3em;
-    box-shadow: 0 0.25rem 0 $light-foreground-elevated-shadow;
+    box-shadow: 0 0.25rem 0 var(--bg-elevated-shadow);
 }
