--- a/Stylesheets/_pre.scss
+++ b/Stylesheets/_pre.scss
@@ -1,5 +1,3 @@
-@import "Colors";
-
 pre
 {
     margin: 2rem 0 2rem;
@@ -11,8 +9,8 @@ pre.snippet
     overflow: scroll;
     padding: 0.5rem 0 0.5rem 3rem;
 
-    background-color: $light-code-well;
-    scrollbar-color: $light-accent-barbie-pink transparent;
+    background-color: var(--bg-codewell);
+    scrollbar-color: var(--fg-accent) transparent;
     scrollbar-gutter: stable;
 
     code
@@ -26,7 +24,7 @@ pre.snippet
         }
         span.newline:after
         {
-            color: $light-snippet-line-number;
+            color: var(--fg-snippet-line-number);
 
             position: relative;
             display: inline-block;
@@ -40,22 +38,22 @@ pre.snippet
         //  diffs
         ins
         {
-            background-color: $light-diff-insert;
+            background-color: var(--fg-diff-insert);
             text-decoration: inherit;
         }
         del
         {
-            background-color: $light-diff-delete;
+            background-color: var(--fg-diff-delete);
             text-decoration: inherit;
         }
         mark
         {
-            background-color: $light-diff-update;
+            background-color: var(--fg-diff-update);
             text-decoration: inherit;
         }
     }
     code.language-swift
     {
-        color: $light-swift;
+        color: var(--fg-swift);
     }
 }
