--- a/Stylesheets/_section.metadata.scss
+++ b/Stylesheets/_section.metadata.scss
@@ -20,7 +20,7 @@ section.metadata
         summary::before
         {
             content: '▶';
-            color: $light-foreground-faint;
+            color: var(--fg-light);
             display: inline-block;
             width: 1.25rem;
         }
@@ -31,7 +31,7 @@ section.metadata
             left: -1.25rem;
 
             font-style: italic;
-            color: $light-foreground-semi;
+            color: var(--fg-semi);
         }
 
         p.symbol:first-letter
