define a night mode color scheme

--- a/Stylesheets/Main.scss
+++ b/Stylesheets/Main.scss
@@ -185,11 +185,16 @@ label.checkbox
     gap: 0.3em;
 }
 
-input[type="checkbox"]
+input[type="checkbox"],
+input[type="radio"]
+{
+    // For iOS < 15 to remove gradient background
+    background-color: var(--bg);
+}
+
+input[type="checkbox"], input[type="radio"]
 {
     appearance: none;
-    // For iOS < 15 to remove gradient background
-    background-color: white;
     margin: 0;
 
     font-size: inherit;
@@ -203,19 +208,19 @@ input[type="checkbox"]
     border: 2px solid var(--fg-semi);
     border-radius: 0.1em;
 }
-input[type="checkbox"]::before
+input[type="checkbox"]::before, input[type="radio"]::before
 {
     content: "";
     width: 0.65em;
     height: 0.65em;
-    background-color: white;
+    background-color: var(--bg);
 }
-input[type="checkbox"]:checked
+input[type="checkbox"]:checked, input[type="radio"]:checked
 {
     border-color: var(--fg-accent);
     background-color: var(--fg-accent);
 }
-input[type="checkbox"]:checked::before
+input[type="checkbox"]:checked::before, input[type="radio"]:checked::before
 {
     transform-origin: bottom left;
     clip-path: polygon(100% 13%, 39% 100%, 0 70%, 11% 53%, 37% 71%, 83% 0);
