--- a/Stylesheets/_figure.scss
+++ b/Stylesheets/_figure.scss
@@ -61,6 +61,24 @@ figure.chart
                 inset 0 -0.4em 0.5px   0.1em rgba(0,0,0,0.18),
                 inset 0 -1.3em 5em     0.1em rgba(0,0,0,0.11);
         }
+
+        @media (prefers-color-scheme: dark)
+        {
+            > div.pie-geometry
+            {
+                box-shadow:
+                    inset 0 -0.5em 0.75em -0.75em rgba(255, 255, 255, 0.2),
+                    inset 0 -0.4em 0.5px   0.1em rgba(0,0,0,0.34),
+                    inset 0 -1.3em 5em     0.1em rgba(0,0,0,0.30);
+            }
+            > div.pie-color:hover + div.pie-geometry
+            {
+                box-shadow:
+                    inset 0 -0.5em 1.5em -0.75em rgba(255, 255, 255, 0.4),
+                    inset 0 -0.4em 0.5px   0.1em rgba(0,0,0,0.18),
+                    inset 0 -1.3em 5em     0.1em rgba(0,0,0,0.16);
+            }
+        }
     }
 
     div.pie + figcaption
