implement the visual build pipeline indicator

--- a/Stylesheets/Main.scss
+++ b/Stylesheets/Main.scss
@@ -1,9 +1,12 @@
 @import 'Mixins/BackdropBlur';
 @import 'Variables/root';
+@import 'a';
 @import 'blockquote';
+@import 'button';
 @import 'Calendar';
 @import 'Cards';
 @import 'code';
+@import 'div.build-pipeline';
 @import 'div.columns';
 @import 'div.constraints';
 @import 'div.logo';
@@ -224,15 +227,4 @@ input[type="checkbox"]:checked::before, input[type="radio"]:checked::before
 {
     transform-origin: bottom left;
     clip-path: polygon(100% 13%, 39% 100%, 0 70%, 11% 53%, 37% 71%, 83% 0);
-}
-
-a
-{
-    color: var(--fg-accent);
-    text-decoration: none;
-    text-underline-offset: 0.35em;
-}
-a:hover, a:focus
-{
-    text-decoration: underline;
 }
