add CSS for paginator nav

--- a/Stylesheets/Main.scss
+++ b/Stylesheets/Main.scss
@@ -17,6 +17,7 @@
 @import 'Headings';
 @import 'kbd';
 @import 'main.home';
+@import 'nav.paginator';
 @import 'Notices';
 @import 'ol.steps';
 @import 'p';
