--- a/Stylesheets/Variables/_root.scss
+++ b/Stylesheets/Variables/_root.scss
@@ -13,12 +13,13 @@
 
 :root
 {
-    --bg: rgb(240, 240, 240);
-    --bg-translucent: rgba(240, 240, 240, 0.5);
+    --bg: rgb(250, 250, 250);
+    --bg-translucent: rgba(250, 250, 250, 0.5);
 
-    --bg-codewell: rgb(233, 233, 233);
-    --bg-elevated: rgb(223, 223, 223);
-    --bg-elevated-shadow: rgb(172, 172, 172);
+    --bg-codewell: rgb(240, 240, 240);
+    --bg-codewell-gloss: rgb(236, 236, 236);
+    --bg-elevated: rgb(239, 239, 239);
+    --bg-elevated-shadow: rgb(182, 182, 182);
 
     --bg-alert: rgb(255, 103, 103);
     --bg-alert-shadow: rgb(235, 75, 75);
@@ -79,6 +80,7 @@
         --bg-translucent: rgba(20, 20, 20, 0.3);
 
         --bg-codewell: rgb(30, 30, 30);
+        --bg-codewell-gloss: rgb(36, 36, 36);
         --bg-elevated: rgb(32, 32, 32);
         --bg-elevated-shadow: rgb(17, 17, 17);
 
