add validation hint to html form, add styling for invalid repo name

--- a/Stylesheets/_form.scss
+++ b/Stylesheets/_form.scss
@@ -59,6 +59,10 @@ form.config
     {
         background: var(--bg-codewell-gloss);
     }
+    input[type="text"]:invalid
+    {
+        color: var(--fg-accent);
+    }
 }
 form.sort-controls
 {
