--- a/Stylesheets/_form.scss
+++ b/Stylesheets/_form.scss
@@ -55,8 +55,8 @@ form.config
         background: none;
         color: var(--fg-semi);
     }
-    input:not([disabled])[type="text"]:hover,
-    input:not([disabled])[type="text"]:focus
+    input[type="text"]:not([disabled]):not([readonly]):hover,
+    input[type="text"]:not([disabled]):not([readonly]):focus
     {
         background: var(--bg-codewell-gloss);
     }
