prettify the build logs section

--- a/Stylesheets/Main.scss
+++ b/Stylesheets/Main.scss
@@ -19,7 +19,7 @@
 @import 'main.home';
 @import 'nav.paginator';
 @import 'Notices';
-@import 'ol.steps';
+@import 'ol';
 @import 'p';
 @import 'pre';
 @import 'Search';
