--- a/Stylesheets/_a.scss
+++ b/Stylesheets/_a.scss
@@ -23,3 +23,22 @@ a.area:focus
 {
     border-color: var(--fg-accent);
 }
+
+//  This uses a 16px icon with a 2px stroke width, but on a retina display the 75% scale should
+//  still look sharp.
+a[rel='external']::after
+{
+    display: inline-block;
+    content: '';
+    height: 12px;
+    width: 12px;
+
+    margin-left: 0.5em;
+
+    background: var(--fg-accent);
+    mask-image: var(--leaving-icon);
+    mask-size: 100% 100%;
+
+    -webkit-mask-image: var(--leaving-icon);
+    -webkit-mask-size: 100% 100%;
+}
