organize @_spi and obsoleted symbols into subsections of SegregatedList

--- a/Stylesheets/_section.group.scss
+++ b/Stylesheets/_section.group.scss
@@ -65,6 +65,12 @@ section.group
             }
         }
     }
+    details.impl + details.impl
+    {
+        margin-top: 1em;
+        border-top: dashed 1px var(--fg-light);
+        padding-top: 1em;
+    }
 
     details[open]
     {
