add links to home page

--- a/Stylesheets/_main.home.scss
+++ b/Stylesheets/_main.home.scss
@@ -38,8 +38,17 @@ main.home
         {
             ul
             {
-                flex-direction: row;
-                justify-content: space-between;
+                display: grid;
+                grid-template-columns: 1fr 1fr;
+
+                > li
+                {
+                    display: flex;
+                }
+                > li:nth-child(even)
+                {
+                    justify-content: flex-end;
+                }
             }
         }
     }
