--- a/Stylesheets/_form.scss
+++ b/Stylesheets/_form.scss
@@ -34,7 +34,14 @@ form
 }
 form.config
 {
-    input[type="text"]
+    input[type="url"]
+    {
+        width: 100%;
+        box-sizing: border-box;
+    }
+
+    input[type="text"],
+    input[type="url"]
     {
         outline: none;
         background: var(--bg-codewell);
@@ -50,22 +57,28 @@ form.config
         font-size: inherit;
     }
     input[type="text"][disabled],
-    input[type="text"][readonly]
+    input[type="text"][readonly],
+    input[type="url"][disabled],
+    input[type="url"][readonly]
     {
         background: none;
         color: var(--fg-semi);
     }
     input[type="text"]:not([disabled]):not([readonly]):hover,
-    input[type="text"]:not([disabled]):not([readonly]):focus
+    input[type="text"]:not([disabled]):not([readonly]):focus,
+    input[type="url"]:not([disabled]):not([readonly]):hover,
+    input[type="url"]:not([disabled]):not([readonly]):focus
     {
         background: var(--bg-codewell-gloss);
     }
-    input[type="text"]:invalid
+    input[type="text"]:invalid,
+    input[type="url"]:invalid
     {
         color: var(--fg-accent);
     }
 
-    input[type="text"]::placeholder
+    input[type="text"]::placeholder,
+    input[type="url"]::placeholder
     {
         color: var(--fg-heavy);
     }
