add interface to the POST api for building specific editions

--- a/Stylesheets/Main.scss
+++ b/Stylesheets/Main.scss
@@ -6,6 +6,7 @@
 @import 'Calendar';
 @import 'Cards';
 @import 'code';
+@import 'details.menu';
 @import 'div.build-pipeline';
 @import 'div.columns';
 @import 'div.constraints';
