separate PackageBuildOperation from PackageConfigOperation, use a little javascript to solve the dropdown menu problem, and add UI for requesting version-specific builds

--- a/Stylesheets/Main.scss
+++ b/Stylesheets/Main.scss
@@ -6,11 +6,11 @@
 @import 'Calendar';
 @import 'Cards';
 @import 'code';
-@import 'details.menu';
 @import 'div.build-pipeline';
 @import 'div.columns';
 @import 'div.constraints';
 @import 'div.logo';
+@import 'div.menu';
 @import 'div.more';
 @import 'dl';
 @import 'figure';
