--- a/Stylesheets/Variables/_root.scss
+++ b/Stylesheets/Variables/_root.scss
@@ -13,6 +13,8 @@
 
 :root
 {
+    --blur-shadow: rgba(0, 0, 0, 0.15);
+
     --bg: rgb(250, 250, 250);
     --bg-translucent: rgba(250, 250, 250, 0.5);
 
@@ -76,6 +78,8 @@
 
     :root
     {
+        --blur-shadow: rgba(0, 0, 0, 0.75);
+
         --bg: rgb(20, 20, 20);
         --bg-translucent: rgba(20, 20, 20, 0.3);
 
