--- a/Stylesheets/_div.menu.scss
+++ b/Stylesheets/_div.menu.scss
@@ -21,12 +21,12 @@ div.menu
         position: absolute;
         display: none;
 
-        @include backdrop-blur-pink;
+        @include backdrop-blur;
 
         list-style-type: none;
         margin: 0;
         padding: 0.5em 1em 0.75em 1em;
-        //box-shadow: 0 0.25rem 0 var(--bg-accent-shadow);
+        box-shadow: 0 1rem 3rem var(--blur-shadow);
         border-radius: 0.5rem;
 
         > li
